@@ -57,6 +57,7 @@ systemd System and Service Manager
  	- return 'r' rather than '-errno';
  	- remove sd_bus_message_append_array_memfd function;
  	- remove sd_bus_message_append_string_iovec function;
+ 	- remove sd_bus_message_append_string_space function;
  * initctl:
  	- don't hide error code;
  * logind:
